tests/integrations/basic-fail/tests/actual_tests_bless/rustfix-fail-revisions.rs
//@revisions: a b
#![deny(warnings)]

fn main() {
    let x = match 0 {
        0 => String::new()
        //~^ ERROR: expected `,`
        _ => return,
    };

    x;
    x;
}
